# MLOps-Pipeline-Prophet-Forecasting

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
.circleci/: config.yml
.github/workflows/: daily-optimisation.yml  deploy.yml
scripts/: deploy.sh
src/: data.py  database.py  extractor.py  local.py  main.py  model.py  optimiser.py  optimizer.py  processor.py  settings.py  streamlit_app.py
tests/: __init__.py  test_data.py  test_database.py  test_extractor.py  test_model.py  test_optimiser.py  test_optimizer.py  test_processor.py
